[package]
name = "winit-windows-custom-window"
version = "0.1.0"
authors = ["kai <thiskaiguy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["winit"]

[dependencies]
winit = { version = "0.21.0", optional = true }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.8"
features = [
    "commctrl",
]
