[package]
name = "windows-custom-window"
version = "0.2.0"
authors = ["kai <thiskaiguy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.3"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.8"
features = [
    "commctrl",
]

[dev-dependencies]
winit = "*"
