[package]
name = "windows-window-subclass"
version = "0.3.0"
authors = ["kai <thiskaiguy@gmail.com>"]
edition = "2018"
repository = "https://github.com/thisKai/windows-window-subclass"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["unstable"]
unstable = []

[dependencies]
raw-window-handle = "0.3"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "commctrl",
]

[dev-dependencies]
winit = "0.21"
minifb = "0.15"